--- a/phase-1/first-day/first-day.html
+++ b/phase-1/first-day/first-day.html
@@ -10,7 +10,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <title>Vite + React</title>
+    <title>Первый день в Буткемпе</title>
     <style>
       ul {
         list-style: none;
